<resources>
    <string name="app_name">NewPath</string>
    <string name="text_initalPage">Motivação faz você começar, hábito faz você continuar! Vamos juntos, criar hábitos para uma vida integral.</string>
    <string name="text_welcome">Bem vind@ de volta,</string>
    <string name="text_loginPage">faça o login para continuar no NewPath :)</string>
    <string name="forgetPassword">Esqueceu a senha?</string>
    <string name="singUp">É nov@ aqui ? Sing Up :)</string>
    <string name="wheelsTitle">Roda da vida</string>
    <string name="wheelsFirstText">Antes de começar sua jornada, precisamos entender melhor o seu momento de vida, ter uma visão mais holística para te ajudar a criar um panorama pessoal.</string>
    <string name="wheelsSecondText">A roda da vida é muito utilizada em sessões de Coaching, com ela em mãos, é possível analisar problemas, elencar prioridades e traçar planos futuros para atingir um novo equilíbrio.</string>
    <string name="wheelsStart">Iniciar a Roda da Vida</string>
    <string name="wheelsInf">Quer saber mais sobre a roda da vida? Tem um post muito bom lá no Blog :)</string>
    <string name="rangeWheels">De 0 a 10 avalie as seguintes áreas da sua vida</string>
    <string name="obsWheels">Lembre-se, não se trata de obter 10! É sobre parar e refletir: "Como estou me sentindo neste momento?". Se essa roda fosse um pneu no seu carro, como seria uma viagem? ;) A sinceridade aqui é a chave do sucesso.</string>
    <string name="personalGrowth">Crescimento Pessoal</string>
    <string name="career">Carreira</string>
    <string name="business">Finanças</string>
    <string name="health">Saúde / Atividade físicas</string>
    <string name="social">Vida Social / Amig@s</string>
    <string name="family">Relacionamento familiar</string>
    <string name="affective">Relacionamento afetivo</string>
    <string name="fun">Diversão</string>
    <string name="collectiveConspiracy">Contribuição com o coletivo</string>
    <string name="spirituality">Espiritualidade</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="graph">Sua Roda da vida atual</string>
    <string name="avaliation">Ver avaliação</string>
    <string name="formulario">Formulário</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="idade">Idade</string>
    <string name="cidade">Cidade</string>
    <string name="roda_atual">Sua Roda da vida atual</string>
    <string name="traco">___</string>
    <string name="texto_1">De acordo com as avaliações das áreas da sua roda da vida, selecionamos as que merecem maior foco no momento.</string>
    <string name="texto_2">Trabalharemos a área destacada nos próximos 3 meses :)</string>
    <string name="btn_familiar">Relacionamento Familiar</string>
    <string name="btn_saude">Saúde / Atividade Física</string>
    <string name="btn_coletivo">Contribuição para o coletivo</string>
    <string name="btn_espititualidade">Espiritualidade</string>
    <string name="btnFinalizar">Finalizar e Enviar</string>
    <string name="desafio_ok">Desafio concluído com sucesso!</string>
    <string name="congratulations">Parabéns, @usuario ;D</string>
    <string name="pontos">Seus pontos</string>
    <string name="pontuacao">Pontuação do desafio.................</string>
    <string name="bonus">Pontuação bônus.................</string>
    <string name="pontuacao_face">Pontuação Facebook.................</string>
    <string name="traco_2">-----------------------------------------</string>
    <string name="total">Total...........................................</string>
    <string name="button_ok">Ok</string>
    <string name="quantidade_pontos">pts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">509381012756237</string>
    <string name="fb_login_protocol_scheme">fb509381012756237</string>
</resources>











