<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.newpath.activity.ResultWheelsOfLife">

    <ImageView
        android:layout_width="131dp"
        android:layout_height="72dp"
        android:src="@drawable/logo_sup_o_03"
        android:id="@+id/imageView"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:text="@string/roda_atual"
        android:textColor="@color/colorFontPrincipal"
        android:id="@+id/txtRodaAtual"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.032"
        android:layout_marginStart="8dp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:text="@string/traco"
        android:textStyle="bold"
        android:textColor="@color/colorFontPrincipal"
        android:id="@+id/txt_traco"
        app:layout_constraintTop_toBottomOf="@+id/txtRodaAtual"
        app:layout_constraintLeft_toLeftOf="@+id/txtRodaAtual"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/txtRodaAtual"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txt_texto_1"
        android:layout_width="300dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/texto_1"
        android:textColor="@color/colorFontPrincipal"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_traco"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        tools:layout_editor_absoluteX="27dp" />

    <TextView
        android:layout_width="293dp"
        android:layout_height="55dp"
        android:text="@string/texto_2"
        android:textSize="19sp"
        android:id="@+id/txt_texto_2"
        android:textColor="@color/colorFontSecondary"
        app:layout_constraintTop_toBottomOf="@+id/txt_texto_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_texto_1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_texto_1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="11dp"
        app:layout_constraintHorizontal_bias="0.785" />

    <Button
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:id="@+id/btnFamiliar"
        android:background="@drawable/button_bg_radius_grey"
        android:text="@string/btn_familiar"
        android:textSize="12sp"
        android:elevation="5dp"
        android:textColor="@color/colorFontSecondary"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_texto_2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_traco" />

    <Button
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:id="@+id/btnSaude"
        android:background="@drawable/button_bg_radius_grey"
        android:text="@string/btn_saude"
        android:textSize="12sp"
        android:textColor="@color/colorFontSecondary"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@+id/btnFamiliar"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/btnFamiliar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/txt_texto_2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:layout_width="183dp"
        android:layout_height="41dp"
        android:id="@+id/btnColetivo"
        android:background="@drawable/button_bg_radius_grey"
        android:text="@string/btn_coletivo"
        android:textSize="12sp"
        android:textColor="@color/colorFontSecondary"
        android:textAllCaps="false"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFamiliar"
        app:layout_constraintLeft_toLeftOf="@+id/btnFamiliar"
        android:layout_marginLeft="-18dp" />

    <Button
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:id="@+id/btnEspiritualidade"
        android:background="@drawable/button_bg_radius_grey"
        android:text="@string/btn_espititualidade"
        android:textSize="12sp"
        android:textColor="@color/colorFontSecondary"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSaude"
        app:layout_constraintRight_toRightOf="@+id/btnSaude"
        app:layout_constraintLeft_toRightOf="@+id/btnColetivo"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:background="@drawable/button_bg_radius"
        android:id="@+id/btnFinalizar"
        android:text="@string/btnFinalizar"
        android:textColor="@color/colorBackgroundForm"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnColetivo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
