<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.newpath.activity.ChartGraph"
    android:background="@color/colorBackgroundForm"
    >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.newpath.activity.ChartGraph">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="123dp"
        android:layout_height="47dp"
        app:srcCompat="@drawable/logo_sup_o_03"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.11"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/traco"
        android:textStyle="bold"
        android:textColor="@color/colorFontPrincipal"
        android:id="@+id/txt_traco"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView17"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:textSize="20dp"
        android:textColor="@color/colorFontPrincipal"
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="369dp"
        android:layout_height="333dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_traco"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0">
    </com.github.mikephil.charting.charts.PieChart>

    <Button
        android:id="@+id/button"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:text="@string/avaliation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_bg_radius"
        android:textColor="@color/colorButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>