<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.newpath.RangeWheesLife"
    android:background="@color/colorBackgroundForm"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.user.newpath.RangeWheesLife"
        android:background="@color/colorBackgroundForm">

        <TextView
            android:id="@+id/txt_financas"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="FN"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar2"
            app:layout_constraintLeft_toRightOf="@+id/seekBar2"
            app:layout_constraintTop_toTopOf="@+id/seekBar2"
            android:textColor="@color/colorFontSecondary"/>

        <ImageView
            android:id="@+id/imgLogoSup"
            android:layout_width="121dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/logo_sup_o_03"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="28dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="281dp"
            android:layout_height="42dp"
            android:text="@string/rangeWheels"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"
            android:textSize="17sp"
            android:textColor="@color/colorFontPrincipal"
            app:layout_constraintHorizontal_bias="0.505" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="283dp"
            android:layout_height="115dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/obsWheels"
            app:layout_constraintLeft_toLeftOf="@+id/textView10"
            app:layout_constraintRight_toRightOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginStart="8dp"
            android:textSize="15sp"
            android:textColor="@color/colorFontSecondary" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalGrowth"
            app:layout_constraintTop_toTopOf="@+id/seekBar9"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar9"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/seekBar9"
            android:layout_marginRight="7dp"
            android:textColor="@color/colorFontPrincipal"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/business"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar2"
            app:layout_constraintRight_toLeftOf="@+id/seekBar2"
            app:layout_constraintTop_toTopOf="@+id/seekBar2"
            app:layout_constraintVertical_bias="0.41000003"
            android:textColor="@color/colorFontPrincipal"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="7dp"
            android:text="@string/career"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar4"
            app:layout_constraintRight_toLeftOf="@+id/seekBar4"
            android:textColor="@color/colorFontPrincipal"
            app:layout_constraintTop_toTopOf="@+id/seekBar4"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="157dp"
            android:layout_height="16dp"
            android:text="@string/health"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar6"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/seekBar6"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/seekBar6"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.41000003"
            android:textColor="@color/colorFontPrincipal"/>


        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="13dp"
            android:max="10"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="@+id/seekBar4"
            app:layout_constraintRight_toRightOf="@+id/seekBar4"
            app:layout_constraintTop_toBottomOf="@+id/seekBar4"
            android:progressTint="@color/colorFontPrincipal"
            android:thumb="@drawable/custom_thumb" />

        <SeekBar
            android:id="@+id/seekBar6"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="13dp"
            android:max="10"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="@+id/seekBar2"
            app:layout_constraintRight_toRightOf="@+id/seekBar2"
            app:layout_constraintTop_toBottomOf="@+id/seekBar2"
            android:progressTint="@color/colorFontPrincipal"
            android:thumb="@drawable/custom_thumb"
            />

        <SeekBar
            android:id="@+id/seekBar5"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="13dp"
            android:max="10"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="@+id/seekBar6"
            app:layout_constraintRight_toRightOf="@+id/seekBar6"
            app:layout_constraintTop_toBottomOf="@+id/seekBar6"
            android:progressTint="@color/colorFontPrincipal"
            android:thumb="@drawable/custom_thumb"
            />

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="13dp"
            android:max="10"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="@+id/seekBar9"
            app:layout_constraintRight_toRightOf="@+id/seekBar9"
            app:layout_constraintTop_toBottomOf="@+id/seekBar9"
            android:progressTint="@color/colorFontPrincipal"
            android:thumb="@drawable/custom_thumb"
            />

        <SeekBar
            android:id="@+id/seekBar9"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="29dp"
            android:max="10"
            android:progress="0"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView11"
            app:layout_constraintRight_toRightOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:progressTint="@color/colorFontPrincipal"
            tools:layout_editor_absoluteX="180dp"
            android:thumb="@drawable/custom_thumb" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar5"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/seekBar5"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/seekBar5"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.41000003"
            android:textColor="@color/colorFontPrincipal"/>

        <TextView
            android:id="@+id/txt_crescimento"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="CP"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar9"
            app:layout_constraintLeft_toRightOf="@+id/seekBar9"
            app:layout_constraintTop_toTopOf="@+id/seekBar9"
            android:textColor="@color/colorFontSecondary"/>

        <TextView
            android:id="@+id/txt_carreira"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="CA"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar4"
            app:layout_constraintLeft_toRightOf="@+id/seekBar4"
            app:layout_constraintTop_toTopOf="@+id/seekBar4"
            android:textColor="@color/colorFontSecondary"/>

        <TextView
            android:id="@+id/txt_saude"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="SA"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar6"
            app:layout_constraintLeft_toRightOf="@+id/seekBar6"
            app:layout_constraintTop_toTopOf="@+id/seekBar6"
            android:textColor="@color/colorFontSecondary"/>

        <TextView
            android:id="@+id/txt_amigos"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="VA"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar5"
            app:layout_constraintLeft_toRightOf="@+id/seekBar5"
            app:layout_constraintTop_toTopOf="@+id/seekBar5"
            android:textColor="@color/colorFontSecondary"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:text="Continuar"
            android:background="@drawable/button_bg_radius"
            android:textColor="@color/colorButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar5"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView16"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/txt_amigos"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintVertical_bias="0.562"
            />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.11" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
